--- a/Fullstack/frontend/src/styles/App.css
+++ b/Fullstack/frontend/src/styles/App.css
@@ -6,16 +6,30 @@
 }
 
 /* Default Light Theme */
-:root[data-theme="light"] {
+:root {
   --text: #0F1014;
+  --lighttext: #444;
+  --inverttext: white;
+
   --background: #F4F4F6;
+  --border: #d9d9d9;
+  --card: white;
+
   --primary: #6971A9;
   --secondary: #C2B1CB;
   --accent: #848CB9;
 }
+
+/* Dark Theme */
 :root[data-theme="dark"] {
-  --text: #ebecf0;
-  --background: #09090b;
+  --text: #eaeaea;
+  --lighttext: #999;
+  --inverttext: black;
+  
+  --background: #181818;
+  --border: #5c5c5c;
+  --card: #313131;
+
   --primary: #565d95;
   --secondary: #44334d;
   --accent: #474f7b;
@@ -23,9 +37,22 @@
 
 /* Links */
 a {
+  font-weight: bold;
   color: var(--primary);
 }
 
 a:hover {
-  color: var(--secondary);
+  color: var(--accent);
+}
+
+label {
+  color: var(--text);
+}
+
+h1 {
+  color: var(--text);
+}
+
+p {
+  color: var(--text);
 }
