--- a/Fullstack/frontend/src/styles/index.css
+++ b/Fullstack/frontend/src/styles/index.css
@@ -11,3 +11,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Default Light Theme */
+:root {
+  --text: #0F1014;
+  --lighttext: #444;
+  --inverttext: white;
+
+  --background: #F4F4F6;
+  --border: #d9d9d9;
+  --card: white;
+
+  --primary: #6971A9;
+  --secondary: #C2B1CB;
+  --accent: #848CB9;
+}
+
+/* Dark Theme */
+[data-theme="dark"] {
+  --text: #eaeaea;
+  --lighttext: #999;
+  --inverttext: black;
+  
+  --background: #181818;
+  --border: #5c5c5c;
+  --card: #313131;
+
+  --primary: #565d95;
+  --secondary: #44334d;
+  --accent: #474f7b;
+}
