Repo search and buttons

--- a/Fullstack/frontend/src/styles/index.css
+++ b/Fullstack/frontend/src/styles/index.css
@@ -22,6 +22,8 @@ code {
   --border: #d9d9d9;
   --card: white;
 
+  --button: #F5F5F5;
+
   --primary: #6971A9;
   --secondary: #C2B1CB;
   --accent: #848CB9;
