Combined settings and account pages

--- a/Fullstack/frontend/src/styles/index.css
+++ b/Fullstack/frontend/src/styles/index.css
@@ -40,7 +40,7 @@ code {
 /* Dark Theme */
 [data-theme="dark"] {
   --text: #eaeaea;
-  --lighttext: #999999;
+  --lighttext: #bbbbbb;
   --inverttext: black;
   
   --background: #181818;
