Reworked styles to use css

--- a/Fullstack/frontend/src/styles/App.css
+++ b/Fullstack/frontend/src/styles/App.css
@@ -14,3 +14,13 @@ a {
 a:hover {
   color: var(--accent);
 }
+
+
+/* Message error & success colors */
+.success {
+  color: var(--green);
+}
+
+.error {
+  color: var(--red);
+}
