--- a/Fullstack/frontend/src/styles/Components/ThemeToggle.module.css
+++ b/Fullstack/frontend/src/styles/Components/ThemeToggle.module.css
@@ -14,6 +14,11 @@
     white-space: nowrap;
     gap: 5px;
     position: relative;
+    transition: background-color 0.1s ease-in-out;
+}
+
+.button:hover {
+    background-color: var(--button-hover);
 }
 
 
