Implemented burger menu for smaller screens

--- a/Fullstack/frontend/src/styles/Components/Layout/Header.module.css
+++ b/Fullstack/frontend/src/styles/Components/Layout/Header.module.css
@@ -11,6 +11,7 @@
     border-bottom: var(--border) solid 1px;
 
     max-width: 100%;
+    z-index: 1000; /* appear ontop everything */
 }
 
 .logo {
