--- a/Fullstack/frontend/src/styles/Components/Layout/Navbar.module.css
+++ b/Fullstack/frontend/src/styles/Components/Layout/Navbar.module.css
@@ -7,6 +7,7 @@
     align-items: center;
     gap: 12px;
     flex-direction: row-reverse; /* reverse so hover + works */
+
 }
 
 .iconAccount {
@@ -54,6 +55,8 @@
     list-style: none;
     justify-content: left;
     align-items: center;
+
+    flex-wrap: wrap;
 }
 
 .navbarItem {
@@ -73,4 +76,70 @@
 
 .navbarItem.selected {
     background-color: var(--nav);
+}
+
+
+
+.burger, .close {
+    width: 100%;
+    height: 100%;
+}
+
+
+
+.menuButton {
+    height: 45px;
+    width: 45px;
+    padding: 6px;
+    border-radius: 8px;
+    display: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: var(--text);
+    transition: background-color 0.1s ease-in-out;
+}
+
+.menuButton:hover {
+    background-color: var(--nav-hover);
+}
+
+.menuButton.selected {
+    background-color: var(--nav);
+}
+
+
+@media (max-width: 600px) {
+    .menuButton {
+        display: block;
+        position: relative;
+        margin-left: 20px;
+    }
+
+    .navbar {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        position: absolute;
+        top: 70px;
+        left: 0;
+        background: var(--card);
+        padding: 10px;
+        border-radius: 0px 0px 16px 16px;
+        border-bottom: var(--border) solid 1.5px;
+        height: fit-content;
+    }
+
+    .navbarItem {
+        width: 100%;
+    }
+
+    .showMenu {
+        display: flex;
+    }
+
+    .hideMenu {
+        display: none;
+    }
 }
