--- a/Fullstack/frontend/src/styles/Components/Layout/Navbar.module.css
+++ b/Fullstack/frontend/src/styles/Components/Layout/Navbar.module.css
@@ -1,5 +1,8 @@
-.iconAccount:hover + .username:not(.selected) {
-    background-color: var(--nav-hover);
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 
 .settings {
@@ -7,21 +10,12 @@
     align-items: center;
     gap: 12px;
     flex-direction: row-reverse; /* reverse so hover + works */
-
 }
 
 .iconAccount {
     width: 45px;
     height: 45px;
     cursor: pointer;
-}
-
-
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
 }
 
 .username {
@@ -44,6 +38,21 @@
     background-color: var(--nav);
 }
 
+.iconAccount:hover + .username:not(.selected) {
+    background-color: var(--nav-hover);
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 .navbar {
     display: flex;
@@ -55,8 +64,6 @@
     list-style: none;
     justify-content: left;
     align-items: center;
-
-    flex-wrap: wrap;
 }
 
 .navbarItem {
@@ -78,15 +85,7 @@
     background-color: var(--nav);
 }
 
-
-
-.burger, .close {
-    width: 100%;
-    height: 100%;
-}
-
-
-
+/* Small screens only */
 .menuButton {
     height: 45px;
     width: 45px;
@@ -109,6 +108,13 @@
     background-color: var(--nav);
 }
 
+.burger, .close {
+    width: 100%;
+    height: 100%;
+}
+
+
+
 
 @media (max-width: 600px) {
     .menuButton {
@@ -118,28 +124,32 @@
     }
 
     .navbar {
-        display: none;
+        display: flex;
         flex-direction: column;
+        height: fit-content;
         width: 100%;
         position: absolute;
-        top: 70px;
+        top: 70px; /* Bellow the header */
         left: 0;
         background: var(--card);
         padding: 10px;
         border-radius: 0px 0px 16px 16px;
-        border-bottom: var(--border) solid 1.5px;
-        height: fit-content;
+        border-bottom: var(--border) solid 2px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+        /* Animation */
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .navbarItem {
         width: 100%;
     }
 
+    /* Visible */
     .showMenu {
-        display: flex;
-    }
-
-    .hideMenu {
-        display: none;
+        opacity: 1;
+        visibility: visible;
     }
 }
