Fixed mis named theme hover

--- a/Fullstack/frontend/src/styles/index.css
+++ b/Fullstack/frontend/src/styles/index.css
@@ -69,7 +69,7 @@ code {
   --darkcard: #3D3D3D;
 
   --button: #3c3c3c;
-  --buttonhover: #4c4c4c;
+  --button-hover: #4c4c4c;
 
   --nav: #595959;
   --nav-hover: #444444;
