--- a/Fullstack/frontend/src/styles/Components/Repo/Repository.module.css
+++ b/Fullstack/frontend/src/styles/Components/Repo/Repository.module.css
@@ -7,7 +7,7 @@
     border: var(--border) thin solid;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    padding: 12px 20px 16px 20px;
     max-width: 1000px;
     cursor: pointer;
 }
@@ -17,40 +17,51 @@
     color: var(--text);
     flex-wrap: wrap;
     gap: 10px;
-    overflow: hidden;
+    align-items: center;
 }
 
 .repoName {
     font-size: 1.2rem;
     font-weight: bold;
     color: var(--text);
+    white-space: nowrap;
 }
 
 .visability {
     background: var(--lightsecondary);
     padding: 4px 8px;
     border-radius: 4px;
-    font-size: 12px;
+    font-size: 0.8rem;
     color: var(--text);
+    height: fit-content;
 }
 
 .avatars {
     display: flex;
     margin-left: auto;
+    gap: 6px;
 }
 
 .avatar {
-    width: 24px;
-    height: 24px;
-    background: var(--primary);
-    border-radius: 50%;
-    margin-left: 4px;
+    width: 32px;
+    height: 32px;
+    border: 1px solid var(--primary);
 }
+
+.avatarExtra {
+    color: var(--primary);
+    background: var(--lightsecondary);
+    padding: 4px 8px;
+    border-radius: 4px;
+    font-size: 0.8rem;
+    font-weight: 500;
+}
+
 
 .divider {
     border: none;
     border-top: 2px solid var(--primary);
-    margin: 10px 0px;
+    margin: 8px 0px 10px 0px;
 }
 
 .description {
@@ -58,9 +69,16 @@
     color: var(--text);
 }
 
+
+
 .lastUpdated {
     font-style: italic;
     font-size: 0.8rem;
     color: var(--primary);
     float: right;
+}
+
+.lastUpdatedDate {
+    font-style: normal;
+    margin-left: 5px;
 }
