Implemented repo file explorer

--- a/Fullstack/frontend/src/styles/Components/Repo/Repository.module.css
+++ b/Fullstack/frontend/src/styles/Components/Repo/Repository.module.css
@@ -1,17 +1,3 @@
-
-
-.container {
-    display: block;
-    width: 95%;
-    background: var(--tintcard);
-    border: var(--border) thin solid;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 12px 20px 16px 20px;
-    max-width: 1000px;
-    cursor: pointer;
-}
-
 .header {
     display: flex;
     color: var(--text);
@@ -25,6 +11,7 @@
     font-weight: bold;
     color: var(--text);
     white-space: nowrap;
+    cursor: pointer;
 }
 
 .visability {
@@ -36,9 +23,16 @@
     height: fit-content;
 }
 
-.avatars {
+.colaborators {
     display: flex;
     margin-left: auto;
+    gap: 6px;
+    cursor: pointer;
+    align-items: center;
+}
+
+.avatars {
+    display: flex;
     gap: 6px;
 }
 
