--- a/Fullstack/frontend/src/styles/Components/Repo/FileExplorer.module.css
+++ b/Fullstack/frontend/src/styles/Components/Repo/FileExplorer.module.css
@@ -42,3 +42,62 @@ td:nth-child(3),
 td:nth-child(4) {
   text-align: right;
 }
+
+
+
+.navigation {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  background: var(--lightsecondary);
+  padding: 4px 8px;
+  border-radius: 8px;
+}
+
+
+
+.navButton {
+  cursor: pointer;
+  background: none;
+  border: none;
+  padding: 4px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.navButton img {
+  width: 22px;
+  height: 22px;
+  object-fit: contain;
+}
+
+.navButton:disabled {
+  cursor: default;
+}
+
+.navButton:not(:disabled):hover {
+  background-color: var(--secondary);
+}
+
+
+
+.breadcrumb {
+  display: flex;
+  align-items: center;
+}
+
+.breadcrumbPart {
+  cursor: pointer;
+  color: var(--text);
+}
+
+.breadcrumbPart:hover {
+  text-decoration: underline;
+}
+
+.breadcrumbSeparator {
+  margin: 0px 6px;
+  user-select: none;
+}
