--- a/Fullstack/frontend/src/styles/Components/Repo/Repository.module.css
+++ b/Fullstack/frontend/src/styles/Components/Repo/Repository.module.css
@@ -14,7 +14,7 @@
     cursor: pointer;
 }
 
-.visability {
+.visibility {
     background: var(--lightsecondary);
     padding: 4px 8px;
     border-radius: 4px;
