--- a/Fullstack/frontend/src/styles/Components/Layout/Navbar.module.css
+++ b/Fullstack/frontend/src/styles/Components/Layout/Navbar.module.css
@@ -109,18 +109,20 @@
 }
 
 .burger, .close {
-    width: 100%;
-    height: 100%;
+    width: 33px;
+    height: 33px;
 }
 
 
 
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
     .menuButton {
-        display: block;
+        height: 45px;
+        width: 45px;
+        display: inline-block;
         position: relative;
-        margin-left: 20px;
+        margin: 0px 20px;
     }
 
     .navbar {
