Updated breadcrumb style to highlight current dir

--- a/Fullstack/frontend/src/styles/Components/Repo/FileExplorer.module.css
+++ b/Fullstack/frontend/src/styles/Components/Repo/FileExplorer.module.css
@@ -44,10 +44,19 @@
 .breadcrumbPart {
   cursor: pointer;
   color: var(--text);
+  font-style: italic;
+}
+
+.breadcrumbPart:last-child {
+  font-style: normal;
 }
 
 .breadcrumbPart:hover {
   text-decoration: underline;
+}
+
+.breadcrumbPart:last-child:hover {
+  text-decoration: none;
 }
 
 .breadcrumbSeparator {
