Implemented commit page

--- a/Fullstack/frontend/src/styles/Pages/Repos/SubPages/RepoPage.module.css
+++ b/Fullstack/frontend/src/styles/Pages/Repos/SubPages/RepoPage.module.css
@@ -6,6 +6,10 @@
     gap: 10px;
 }
 
+.header.spaced {
+    justify-content: space-between;
+}
+
 .visibility {
     background: var(--lightsecondary);
     padding: 4px 8px;
