--- a/Fullstack/frontend/src/styles/Components/Repo/RepoPageHeader.module.css
+++ b/Fullstack/frontend/src/styles/Components/Repo/RepoPageHeader.module.css
@@ -1,3 +1,15 @@
+.header {
+    display: flex;
+    width: 100%;
+    background: var(--accent);
+    align-items: center;
+    padding: 4px 10px;
+    gap: 10px;
+    justify-content: center;
+    min-height: 46px;
+    border-radius: 8px 8px 0px 0px;
+}
+
 
 .navbar {
     display: flex;
