--- a/Fullstack/frontend/src/styles/Pages/Repos/Create.module.css
+++ b/Fullstack/frontend/src/styles/Pages/Repos/Create.module.css
@@ -1,3 +1,9 @@
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
 .createHolder {
     background: var(--card);
     width: 90%;
