--- a/Fullstack/frontend/src/styles/components/inputs/TextInput.module.css
+++ b/Fullstack/frontend/src/styles/components/inputs/TextInput.module.css
@@ -10,12 +10,18 @@
 }
 
 .input {
+    resize: none;
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 8px;
     font-size: 16px;
+    font-family: inherit;
     box-sizing: border-box;
+}
+
+.errorInput {
+    border: 1px solid var(--red);
 }
 
 
@@ -48,4 +54,17 @@
 
 .showButton:hover {
     background-color: var(--button-hover);
+}
+
+
+
+
+.textAreaContainer {
+
+}
+
+
+.charCount {
+    font-size: 0.75rem;
+    color: var(--lighttext);
 }
