Fixed create card styling to separate elements

--- a/Fullstack/frontend/src/styles/Pages/Repos/Create.module.css
+++ b/Fullstack/frontend/src/styles/Pages/Repos/Create.module.css
@@ -1,19 +1,8 @@
-.form {
+.createHolder {
     display: flex;
     flex-direction: column;
     gap: 20px;
-}
-
-.createHolder {
-    background: var(--card);
-    width: 90%;
-    padding: 18px;
-    justify-items: center;
-    display: flex;
-    flex-direction: column;
-    gap: 18px;
-    align-items: center;
-    border-radius: 0px 0px 8px 8px;
+    margin-top: 20px;
 }
 
 .checkboxLabel {
@@ -24,10 +13,6 @@
     cursor: pointer;
 }
 
-.error {
-    color: red;
-    font-size: 14px;
-}
 
 .button {
     padding: 10px 15px;
