--- a/Fullstack/frontend/src/styles/Components/Page.module.css
+++ b/Fullstack/frontend/src/styles/Components/Page.module.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     border-radius: 8px;
-    margin-top: 20px;
+    margin: 20px 0px;
     height: fit-content;
     max-width: 1200px;
 }
