Improved not found page usability

--- a/Fullstack/frontend/src/styles/Pages/NoPage.module.css
+++ b/Fullstack/frontend/src/styles/Pages/NoPage.module.css
@@ -1,3 +1,10 @@
 .main {
-    justify-items: 'center';
+    padding: 20px;
+}
+
+.insideCard {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
 }
