--- a/Fullstack/frontend/src/styles/Pages/Repos/SubPages/Contributors.module.css
+++ b/Fullstack/frontend/src/styles/Pages/Repos/SubPages/Contributors.module.css
@@ -23,3 +23,11 @@
     width: 34px;
     border: 1px solid var(--primary);
 }
+
+
+
+.inviteHolder {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
