--- a/Fullstack/frontend/src/styles/Pages/Repos/Repositories.module.css
+++ b/Fullstack/frontend/src/styles/Pages/Repos/Repositories.module.css
@@ -15,3 +15,45 @@
 .noRepositories {
     margin-bottom: 10px;
 }
+
+
+
+.header {
+    display: flex;
+    width: 100%;
+    border-bottom: 2px solid var(--primary);
+    margin-bottom: 10px;
+    gap: 10px;
+}
+
+
+.inviteActions {
+    display: flex;
+    gap: 5px;
+    height: 35px;
+}
+
+.inviteButton {
+    background: var(--primary);
+    padding: 4px 6px;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background 0.1s ease-in-out;
+    font-size: 0.9rem;
+    width: 50%;
+    margin: 2px 0px;
+}
+
+.inviteButton:hover {
+    background: var(--primary-hover);
+}
+
+.inviteTick {
+    height: 12px;
+}
+
+.inviteX {
+    height: 15px;
+}
